Remove test text, fix spacing for posts

--- a/_includes/blog.scss
+++ b/_includes/blog.scss
@@ -26,12 +26,9 @@
   margin-bottom: 1rem;
   font-size: 30px;
   font-size: 3rem;
+  line-height: 4rem;
 }
 
 .blog-list-item p {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
-
-/*------------------------------------*\
-  # Blog List: Medium & Up
-\*------------------------------------*/
